Bug 1486668 - <td> with display: block doesn't get table cell semantics, r=surkov

Differential Revision: https://phabricator.services.mozilla.com/D6158

--HG--
extra : moz-landing-system : lando